@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0z

class User{
    -idLoc
    -latitude
    -longitude
}

class Client {
    -idClientProducer
}
class Company {
    -idClientProducer
}
class Producer {
    -idClientProducer
}

User <|-- Client

User <|-- Producer

User <|-- Company

@enduml